Corrected logo source.

--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
     <!-- RIGHT: centered dark overlay with logo/title/tagline -->
     <section class="hero">
       <div class="overlay">
-        <img class="hero-logo" src="logo.png" alt="ITAMS logo">
+        <img class="hero-logo" src="Images/logo.png" alt="ITAMS logo">
         <h2 class="hero-title">IT Asset<br>Management<br>System</h2>
         <p class="hero-tag">Secure. Scalable. Seamless Asset Management.</p>
       </div>
