Adjusted Sign-Up Redirect

--- a/login.html
+++ b/login.html
@@ -38,22 +38,20 @@
 
           <button class="btn" type="submit" aria-label="Sign in to ITAMS">Sign In</button>
 
-           <!-- 👇 Add this Sign-Up redirect -->
-        <div class="signup-link">
-  <p>
-    Don’t have an account?
-    <button 
-      type="button" 
-      class="btn" 
-      aria-label="Sign up for ITAMS" 
-      id = "signup"
-      onclick="window.location.href='signup.html'">
-      Sign Up
-    </button>
-  </p>
-</div>
-
-      </section>
+          <!-- Sign-Up redirect -->
+          <div class="signup-link">
+            <p>
+              Don’t have an account?
+              <button
+                type="button"
+                class="btn"
+                aria-label="Sign up for ITAMS"
+                id="signup"
+                onclick="window.location.href='signup.html'">
+                Sign Up
+              </button>
+            </p>
+          </div>
         </form>
       </section>
 
